--- a/Index.html
+++ b/Index.html
@@ -29,14 +29,20 @@
 
     <h2>Presentación</h2>
 
-    <p>Somos un equipo de especialistas de entrenadores pokemon.</p>
+    <p>Buenos dias, mañanas, tardes o noches.</p>
+    <p>Somos PokeLunathichs, un equipo especialistas en proporcionar productos para entrenadores pokemon.</p>
+    <p>Aquí podemos ver a Ash, uno de nuestros mejores clientes y representates en la región de Kanto.</p>
+    <p>Su epecialidad es la captura y entrenamiento pokemon.</p>
     <img src="./CSS/Imagenes/Index/ash.png" width="20%" height="20%">
 
-    <p>Nuestras especialidades son el cuidado y la captura de pokemons.</p>
+
+    <p>Entre otras de nuestras especialidades destaca el cuidado de los pokemons.</p>
+    <p>De esta manera lucirán sanos y fuertes durante la aventura.</p>
+    <p>Ella es la enferemera Joe, nuestra mayor especialita en el campo de la medicina pokemon.</p>
     <img src="./CSS/Imagenes/Index/nurse.png" width="20%" height="20%">
 
 
-    <p>Por ello podemos ofrecerte la siguiente gama de productos.</p>
+    <p>Esta es nuestra tienda, en la que podemos ofrecerle una grn variedad de productos.</p>
     <a href="artículos.html"><img src="./CSS/Imagenes/Index/shop.jpg" width="20%" height="20%"></a>
     <p></p>
 
