--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
                 <span class="fas fa-times"></span>
                 <img src="images/pokeballs.png" alt="">
                 <div class="content">
-                    <h3>Pack de 3 pokeballs</h3>
+                    <h3>Pack de 3 Pokeballs</h3>
                     <div class="price">$15.99</div>
                 </div>
             </div>
@@ -170,7 +170,7 @@
                     <img src="images/pokeballs.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>Pack de 3 pokeballs</h3>
+                    <h3>Pack de 3 Pokeballs</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -223,7 +223,7 @@
                 <h3>Pokeball</h3>
                 <div class="price">$6.99</div>
                 <a href="#" class="btn">añadir al carro</a>
-                <details class="detal">Probabilidad de captura x1</details>
+                <details class="detal">Probabilidad de captura x1.</details>
             </div>
 
             <div class="box">
@@ -231,7 +231,7 @@
                 <h3>Superball</h3>
                 <div class="price">$13.99</div>
                 <a href="#" class="btn">añadir al carro</a>
-                <details class="detal">Probabilidad de captura x1.5</details>
+                <details class="detal">Probabilidad de captura x1.5.</details>
             </div>
 
             <div class="box">
@@ -239,7 +239,7 @@
                 <h3>Ultraball</h3>
                 <div class="price">$24.99</div>
                 <a href="#" class="btn">añadir al carro</a>
-                <details class="detal">Probabilidad de captura x2</details>
+                <details class="detal">Probabilidad de captura x2.</details>
             </div>
 
             <div class="box">
@@ -252,10 +252,10 @@
 
             <div class="box">
                 <img src="images/pokeballs.png" alt="">
-                <h3>Pack de 3 pokeballs</h3>
+                <h3>Pack de 3 Pokeballs</h3>
                 <div class="price">$20.99</div>
                 <a href="#" class="btn">añadir al carro</a>
-                <details class="detal">Pack de 3 pokeballs normales</details>
+                <details class="detal">Pack de 3 Pokeballs normales.</details>
             </div>
 
             <div class="box">
@@ -263,7 +263,7 @@
                 <h3>Poción</h3>
                 <div class="price">$4.99</div>
                 <a href="#" class="btn">añadir al carro</a>
-                <details class="detal">Cura 20ps del pokemon</details>
+                <details class="detal">Cura 20ps del pokemon.</details>
             </div>
 
             <div class="box">
@@ -271,7 +271,7 @@
                 <h3>Superpoción</h3>
                 <div class="price">$9.99</div>
                 <a href="#" class="btn">añadir al carro</a>
-                <details class="detal">Cura 50ps del pokemon</details>
+                <details class="detal">Cura 50ps del pokemon.</details>
             </div>
 
             <div class="box">
@@ -279,7 +279,7 @@
                 <h3>Hiperpoción</h3>
                 <div class="price">$19.99</div>
                 <a href="#" class="btn">añadir al carro</a>
-                <details class="detal">Cura 200ps del pokemon</details>
+                <details class="detal">Cura 200ps del pokemon.</details>
             </div>
 
             <div class="box">
@@ -287,7 +287,7 @@
                 <h3>Revivir</h3>
                 <div class="price">$29.99</div>
                 <a href="#" class="btn">añadir al carro</a>
-                <details class="detal">Revive pokemons debilitados</details>
+                <details class="detal">Revive pokemons debilitados.</details>
             </div>
 
             <div class="box">
@@ -295,7 +295,7 @@
                 <h3>Incubadora</h3>
                 <div class="price">$17.99</div>
                 <a href="#" class="btn">añadir al carro</a>
-                <details class="detal">Ayuda a incubar los huevos pokemon</details>
+                <details class="detal">Ayuda a incubar los huevos pokemon.</details>
             </div>
 
 
@@ -315,8 +315,7 @@
 
             <div class="box">
                 <img src="images/quote-img.png" alt="" class="quote">
-                <p>Acompañé a los jefes de la tienda durante su aventura y gracias a sus consejos y ayuda conseguí ser
-                    un gran cuidador pokemon.</p>
+                <p>Acompañé a los jefes de la tienda durante su aventura y gracias a sus consejos y ayuda conseguí ser un gran cuidador pokemon.</p>
                 <img src="images/brock.jpg" class="user" alt="">
                 <h3>Brock</h3>
                 <div class="stars">
@@ -330,8 +329,7 @@
 
             <div class="box">
                 <img src="images/quote-img.png" alt="" class="quote">
-                <p>Gracias a los productos que me proporcionaron pude llegar a ser la lider del gimnario de ciudad
-                    Celeste.</p>
+                <p>Gracias a los productos que me proporcionaron pude llegar a ser la lider del gimnario de ciudad Celeste.</p>
                 <img src="images/misty.jpg" class="user" alt="">
                 <h3>Misty</h3>
                 <div class="stars">
@@ -345,8 +343,7 @@
 
             <div class="box">
                 <img src="images/quote-img.png" alt="" class="quote">
-                <p>Quise acompañar a Ash y gracias a esta tienda pude acompañarle en su aventura e incluso superarle
-                    como entrenador.</p>
+                <p>Quise acompañar a Ash y gracias a esta tienda pude acompañarle en su aventura e incluso superarle como entrenador.</p>
                 <img src="images/aura.jpg" class="user" alt="">
                 <h3>Aura</h3>
                 <div class="stars">
